# OneDay_BuleV

./: .augment-guidelines  .coveragerc  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  RUFF_FIX_SUMMARY.md  activate.py  environment.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.augment/rules/: best-practices.md
.github/workflows/: ci.yml  compatibility.yml  docs.yml
bluev/: __init__.py  config.py  main.py
bluev/actions/: __init__.py
bluev/core/: __init__.py  base_node.py  decorators.py  execution_context.py  node_registry.py  node_types.py  workflow_engine.py  workflow_loader.py
bluev/data/: __init__.py
bluev/nodes/: __init__.py
bluev/nodes/control/: __init__.py  (+1 more)
bluev/ui/: __init__.py  main_window.py
bluev/utils/: __init__.py  decorators.py  exceptions.py  logging.py  system_adapter.py  validators.py
bluev/vision/: __init__.py
docs/: CI_CD_STATUS_REPORT.md  GITHUB_PAGES_SETUP.md  PRD_v1.0.md  brief.md  index.md  tech_implementation.md
docs/00-milestones/: framework-v5-startup-completion.md
docs/01-research/: next-steps-engine-first-research.md
docs/02-ideation/: engine-first-design.md  engine-first-interface-spec.md
docs/03-planning/: engine-first-milestone-plan.md  engine-first-sprint-plan.md
docs/04-execution/: phase1-week2-core-nodes-implementation.md  phase1-week2-quality-optimization.md
docs/05-review/: engine-first-QA-checklist.md  phase1-week2-quality-review.md  ruff-quality-fix-QA.md
docs/UI_Design/: MainUI_Design_Specification.md  NodeEditor_Design_specifcation.md  NodeUI_Design_Specification.md
docs/arch/: BlueV_Architecture_Design.md  Implementation_Roadmap.md  Node_System_Implementation.md  Real_Time_Communication.md  Workflow_Engine_Design.md
docs/development/: best-practices.md  devops-checklist.md  devops-guide.md  devops-implementation-plan.md  environment-recovery.md  github-pages-setup.md  project-status.md  python-version-upgrade.md  quickstart-headless-workflow.md  troubleshooting.md  windows-setup.md  workflow-loader.md
docs/development-plan/: master-plan.md  milestones.md
scripts/: __init__.py  build_on_windows.bat  ci_health_check.py  dependency_monitor.py  e2e_test.py  error_recovery.py  final_fix.py  fix_github_actions.py  fix_mypy_errors.py  fix_ruff_errors.py  health_check.py  performance_benchmark.py  quick_fix_syntax.py  quick_verify.py  rollback_and_fix.py  run_coverage.py  run_on_windows.bat  setup-env.ps1  setup-env.sh  setup_env.py  tasks.py  test_ci_functionality.py  verify_github_actions.py  verify_python_version.py  windows_setup.bat
tests/: __init__.py  conftest.py
tests/integration/: test_min_workflow.py
tests/unit/: test_base_node_validation.py  test_config.py  test_config_extra.py  test_core_engine.py  test_decorators.py  test_engine_errors.py  test_exceptions.py  test_execution_context.py  test_logging.py  test_main.py  test_main_window.py  test_node_click.py  test_node_delay.py  test_node_find_image.py  test_node_log.py  test_node_registry.py  test_node_screenshot.py  test_validators.py  test_workflow_loader.py
(+10 files in other folders)
